[PUP-11]: Upgrade ruby version (#3)
* Remove force flag from migration

This prevents potential destruction of already existent data.

* Optimize default sql performance

Instead of reading the entire job record for our detect loop, just pluck the ID, and only read the job record after we've successfully locked the job.

* Update notes

* Use `find_by` instead of `where` to avoid implicit ordering

* Add Railtie to delayed_job_active_record

Explicitly requiring ActiveRecord models in
`lib/delayed_job_active_record.rb` may result in losing custom
configurations that are set in config/initializers on Rails.

Let' use Railtie and ActiveSupport.on_load to set it up so that
Delayed::Backend::ActiveRecord::Job model will respect arbitrary
configs.

* Fix Rails autoloading

Delay initializing of backend until all initializers have run.

* Backward compatibility with Rails 3.0

Removing calls to `find_by` and `pluck` for Rails 3.0 compatibility.

* Pass ID to find

* Use reload

* Cleanup test database

Removing force from the migration means local runs need to delete the table first

* Fix for rubocop update

Adding department name to all cops and disable safe navigator cop

* A touch of cleanup to the default sql method

* Refactor sql statement

Before

`(run_at <= ? AND (locked_at IS NULL OR locked_at < ?) OR locked_by =
?) AND failed_at IS NULL`

This sql statement is really confusing for sql newbie.

After

`((run_at <= ? AND (locked_at IS NULL OR locked_at < ?)) OR locked_by =
?) AND failed_at IS NULL`

`And` has precedence over `Or`. they are equal.

So this change will not break currently behavior. Just make it more plain for sql newbie.

Reviewed by David Genord and Guihere Cavalcanti

* Fix spec setup for older activerecord

* Updates to support rubocop 1.5.2

* Cleanup from EOL ruby and rails versions

* Attempt to use github actions

* Update db config for Github actions

* Fix coveralls

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,6 @@
 require:
+  - rubocop-packaging
+  - rubocop-performance
   - rubocop-rails
   - rubocop-rspec
 
@@ -8,6 +10,8 @@ AllCops:
   Exclude:
     - lib/**/templates/*
     - vendor/**/*
+  NewCops: enable
+  SuggestExtensions: false
 
 #################
 # [i] Overrides #
@@ -30,30 +34,32 @@ Style/EmptyMethod:
   EnforcedStyle: expanded
 
 # Align ends correctly.
-EndAlignment:
+Layout/EndAlignment:
   EnforcedStyleAlignWith: variable
 
-LineLength:
+Layout/LineLength:
   Max: 120
 
-SignalException:
+Style/SignalException:
   EnforcedStyle: only_raise
 
-SpaceInsideBlockBraces:
+Layout/SpaceInsideBlockBraces:
   SpaceBeforeBlockParameters: true
 
-SpaceInsideHashLiteralBraces:
+Layout/SpaceInsideHashLiteralBraces:
   EnforcedStyle: space
 
-BracesAroundHashParameters:
-  EnforcedStyle: context_dependent
-
-StringLiterals:
+Style/StringLiterals:
   EnforcedStyle: double_quotes
 
 #################
 # Disabled cops #
 #################
+# We actually still work with ruby 2.0 but this setting only supports 2.4+
+# We aren't going to drop old versions just to make rubocop happy.
+Gemspec/RequiredRubyVersion:
+  Enabled: false
+
 Metrics/ClassLength:
   Enabled: false
 
@@ -105,6 +111,9 @@ Style/WordArray:
 Rails/HasAndBelongsToMany:
   Enabled: false
 
+Rails/RakeEnvironment:
+  Enabled: false
+
 # enforces using the class name in a describe block (e.g. `describe TestedClass do`)
 RSpec/DescribeClass:
   Enabled: false
@@ -127,12 +136,15 @@ RSpec/MessageExpectation:
 RSpec/MultipleExpectations:
   Enabled: false
 
+RSpec/MultipleMemoizedHelpers:
+  Enabled: false
+
 # enforces rules about how many nested `describe` blocks are allowed
 RSpec/NestedGroups:
   Enabled: false
 
 # enforces rules about using `it` or `describe` block methods instead of `feature` or `scenario`
-Capybara/FeatureMethods:
+RSpec/Capybara/FeatureMethods:
   Enabled: false
 
 ###################
@@ -152,4 +164,9 @@ Style/FormatStringToken:
   Enabled: false
 
 Style/NumericPredicate:
+  Enabled: false
+
+# We still allow really old versions of Ruby and Rails
+# While I like the safe navigator, we don't want to use it here just yet
+Style/SafeNavigation:
   Enabled: false
